source/parser/CivixDDL/CivixDDLParser.js
// Generated from CivixDDL.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CivixDDLListener = require('./CivixDDLListener').CivixDDLListener;
var grammarFileName = "CivixDDL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'extension'", "'entity'", "'implements'", 
                     "'extends'", "'new'", "'bigint'", "'blob'", "'boolean'", 
                     "'date'", "'datetime'", "'decimal'", "'float'", "'int'", 
                     "'smallint'", "'string'", "'time'", 'null', 'null', 
                     'null', 'null', 'null', "'null'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'?'", 
                     "'+'", "'-'", "'!'", "'*'", 'null', 'null', "'@'" ];

var symbolicNames = [ 'null', "EXTENSION", "ENTITY", "IMPLEMENTS", "EXTENDS", 
                      "NEW", "BIGINT", "BLOB", "BOOLEAN", "DATE", "DATETIME", 
                      "DECIMAL", "FLOAT", "INT", "SMALLINT", "STRING", "TIME", 
                      "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
                      "CharacterLiteral", "StringLiteral", "NullLiteral", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "QUESTION", 
                      "ADD", "SUB", "BANG", "MUL", "TypeIdentifier", "Identifier", 
                      "AT", "WS", "COMMENT", "LINE_COMMENT" ];

var ruleNames =  [ "compilationUnit", "extensionDeclaration", "extensionBody", 
                   "entityDeclaration", "entityBody", "entityBodyDeclaration", 
                   "fieldDeclaration", "variableInitializer", "arrayInitializer", 
                   "parentClass", "typeName", "implementsTypeList", "primitiveType", 
                   "qualifiedName", "annotation", "annotationName", "elementValuePairs", 
                   "elementValuePair", "elementValue", "elementValueArrayInitializer", 
                   "expression", "expressionList", "arguments", "literal" ];

function CivixDDLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CivixDDLParser.prototype = Object.create(antlr4.Parser.prototype);
CivixDDLParser.prototype.constructor = CivixDDLParser;

Object.defineProperty(CivixDDLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CivixDDLParser.EOF = antlr4.Token.EOF;
CivixDDLParser.EXTENSION = 1;
CivixDDLParser.ENTITY = 2;
CivixDDLParser.IMPLEMENTS = 3;
CivixDDLParser.EXTENDS = 4;
CivixDDLParser.NEW = 5;
CivixDDLParser.BIGINT = 6;
CivixDDLParser.BLOB = 7;
CivixDDLParser.BOOLEAN = 8;
CivixDDLParser.DATE = 9;
CivixDDLParser.DATETIME = 10;
CivixDDLParser.DECIMAL = 11;
CivixDDLParser.FLOAT = 12;
CivixDDLParser.INT = 13;
CivixDDLParser.SMALLINT = 14;
CivixDDLParser.STRING = 15;
CivixDDLParser.TIME = 16;
CivixDDLParser.IntegerLiteral = 17;
CivixDDLParser.FloatingPointLiteral = 18;
CivixDDLParser.BooleanLiteral = 19;
CivixDDLParser.CharacterLiteral = 20;
CivixDDLParser.StringLiteral = 21;
CivixDDLParser.NullLiteral = 22;
CivixDDLParser.LPAREN = 23;
CivixDDLParser.RPAREN = 24;
CivixDDLParser.LBRACE = 25;
CivixDDLParser.RBRACE = 26;
CivixDDLParser.LBRACK = 27;
CivixDDLParser.RBRACK = 28;
CivixDDLParser.SEMI = 29;
CivixDDLParser.COMMA = 30;
CivixDDLParser.DOT = 31;
CivixDDLParser.ASSIGN = 32;
CivixDDLParser.QUESTION = 33;
CivixDDLParser.ADD = 34;
CivixDDLParser.SUB = 35;
CivixDDLParser.BANG = 36;
CivixDDLParser.MUL = 37;
CivixDDLParser.TypeIdentifier = 38;
CivixDDLParser.Identifier = 39;
CivixDDLParser.AT = 40;
CivixDDLParser.WS = 41;
CivixDDLParser.COMMENT = 42;
CivixDDLParser.LINE_COMMENT = 43;

CivixDDLParser.RULE_compilationUnit = 0;
CivixDDLParser.RULE_extensionDeclaration = 1;
CivixDDLParser.RULE_extensionBody = 2;
CivixDDLParser.RULE_entityDeclaration = 3;
CivixDDLParser.RULE_entityBody = 4;
CivixDDLParser.RULE_entityBodyDeclaration = 5;
CivixDDLParser.RULE_fieldDeclaration = 6;
CivixDDLParser.RULE_variableInitializer = 7;
CivixDDLParser.RULE_arrayInitializer = 8;
CivixDDLParser.RULE_parentClass = 9;
CivixDDLParser.RULE_typeName = 10;
CivixDDLParser.RULE_implementsTypeList = 11;
CivixDDLParser.RULE_primitiveType = 12;
CivixDDLParser.RULE_qualifiedName = 13;
CivixDDLParser.RULE_annotation = 14;
CivixDDLParser.RULE_annotationName = 15;
CivixDDLParser.RULE_elementValuePairs = 16;
CivixDDLParser.RULE_elementValuePair = 17;
CivixDDLParser.RULE_elementValue = 18;
CivixDDLParser.RULE_elementValueArrayInitializer = 19;
CivixDDLParser.RULE_expression = 20;
CivixDDLParser.RULE_expressionList = 21;
CivixDDLParser.RULE_arguments = 22;
CivixDDLParser.RULE_literal = 23;

function CompilationUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_compilationUnit;
    return this;
}

CompilationUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CompilationUnitContext.prototype.constructor = CompilationUnitContext;

CompilationUnitContext.prototype.EOF = function() {
    return this.getToken(CivixDDLParser.EOF, 0);
};

CompilationUnitContext.prototype.extensionDeclaration = function() {
    return this.getTypedRuleContext(ExtensionDeclarationContext,0);
};

CompilationUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitCompilationUnit(this);
	}
};




CivixDDLParser.CompilationUnitContext = CompilationUnitContext;

CivixDDLParser.prototype.compilationUnit = function() {

    var localctx = new CompilationUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CivixDDLParser.RULE_compilationUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        _la = this._input.LA(1);
        if(_la===CivixDDLParser.EXTENSION || _la===CivixDDLParser.AT) {
            this.state = 48;
            this.extensionDeclaration();
        }

        this.state = 51;
        this.match(CivixDDLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExtensionDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_extensionDeclaration;
    return this;
}

ExtensionDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExtensionDeclarationContext.prototype.constructor = ExtensionDeclarationContext;

ExtensionDeclarationContext.prototype.qualifiedName = function() {
    return this.getTypedRuleContext(QualifiedNameContext,0);
};

ExtensionDeclarationContext.prototype.extensionBody = function() {
    return this.getTypedRuleContext(ExtensionBodyContext,0);
};

ExtensionDeclarationContext.prototype.annotation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnnotationContext);
    } else {
        return this.getTypedRuleContext(AnnotationContext,i);
    }
};

ExtensionDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterExtensionDeclaration(this);
	}
};

ExtensionDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitExtensionDeclaration(this);
	}
};




CivixDDLParser.ExtensionDeclarationContext = ExtensionDeclarationContext;

CivixDDLParser.prototype.extensionDeclaration = function() {

    var localctx = new ExtensionDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CivixDDLParser.RULE_extensionDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 56;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CivixDDLParser.AT) {
            this.state = 53;
            this.annotation();
            this.state = 58;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 59;
        this.match(CivixDDLParser.EXTENSION);
        this.state = 60;
        this.qualifiedName();
        this.state = 61;
        this.extensionBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExtensionBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_extensionBody;
    return this;
}

ExtensionBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExtensionBodyContext.prototype.constructor = ExtensionBodyContext;

ExtensionBodyContext.prototype.entityDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EntityDeclarationContext);
    } else {
        return this.getTypedRuleContext(EntityDeclarationContext,i);
    }
};

ExtensionBodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterExtensionBody(this);
	}
};

ExtensionBodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitExtensionBody(this);
	}
};




CivixDDLParser.ExtensionBodyContext = ExtensionBodyContext;

CivixDDLParser.prototype.extensionBody = function() {

    var localctx = new ExtensionBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CivixDDLParser.RULE_extensionBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(CivixDDLParser.LBRACE);
        this.state = 67;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CivixDDLParser.ENTITY || _la===CivixDDLParser.AT) {
            this.state = 64;
            this.entityDeclaration();
            this.state = 69;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 70;
        this.match(CivixDDLParser.RBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EntityDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_entityDeclaration;
    return this;
}

EntityDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntityDeclarationContext.prototype.constructor = EntityDeclarationContext;

EntityDeclarationContext.prototype.typeName = function() {
    return this.getTypedRuleContext(TypeNameContext,0);
};

EntityDeclarationContext.prototype.entityBody = function() {
    return this.getTypedRuleContext(EntityBodyContext,0);
};

EntityDeclarationContext.prototype.annotation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnnotationContext);
    } else {
        return this.getTypedRuleContext(AnnotationContext,i);
    }
};

EntityDeclarationContext.prototype.parentClass = function() {
    return this.getTypedRuleContext(ParentClassContext,0);
};

EntityDeclarationContext.prototype.implementsTypeList = function() {
    return this.getTypedRuleContext(ImplementsTypeListContext,0);
};

EntityDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterEntityDeclaration(this);
	}
};

EntityDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitEntityDeclaration(this);
	}
};




CivixDDLParser.EntityDeclarationContext = EntityDeclarationContext;

CivixDDLParser.prototype.entityDeclaration = function() {

    var localctx = new EntityDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CivixDDLParser.RULE_entityDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CivixDDLParser.AT) {
            this.state = 72;
            this.annotation();
            this.state = 77;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 78;
        this.match(CivixDDLParser.ENTITY);
        this.state = 79;
        this.typeName();
        this.state = 82;
        _la = this._input.LA(1);
        if(_la===CivixDDLParser.EXTENDS) {
            this.state = 80;
            this.match(CivixDDLParser.EXTENDS);
            this.state = 81;
            this.parentClass();
        }

        this.state = 86;
        _la = this._input.LA(1);
        if(_la===CivixDDLParser.IMPLEMENTS) {
            this.state = 84;
            this.match(CivixDDLParser.IMPLEMENTS);
            this.state = 85;
            this.implementsTypeList();
        }

        this.state = 88;
        this.entityBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EntityBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_entityBody;
    return this;
}

EntityBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntityBodyContext.prototype.constructor = EntityBodyContext;

EntityBodyContext.prototype.entityBodyDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EntityBodyDeclarationContext);
    } else {
        return this.getTypedRuleContext(EntityBodyDeclarationContext,i);
    }
};

EntityBodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterEntityBody(this);
	}
};

EntityBodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitEntityBody(this);
	}
};




CivixDDLParser.EntityBodyContext = EntityBodyContext;

CivixDDLParser.prototype.entityBody = function() {

    var localctx = new EntityBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, CivixDDLParser.RULE_entityBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.match(CivixDDLParser.LBRACE);
        this.state = 94;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CivixDDLParser.BIGINT) | (1 << CivixDDLParser.BLOB) | (1 << CivixDDLParser.BOOLEAN) | (1 << CivixDDLParser.DATE) | (1 << CivixDDLParser.DATETIME) | (1 << CivixDDLParser.DECIMAL) | (1 << CivixDDLParser.FLOAT) | (1 << CivixDDLParser.INT) | (1 << CivixDDLParser.SMALLINT) | (1 << CivixDDLParser.STRING) | (1 << CivixDDLParser.TIME) | (1 << CivixDDLParser.SEMI))) !== 0) || _la===CivixDDLParser.TypeIdentifier || _la===CivixDDLParser.AT) {
            this.state = 91;
            this.entityBodyDeclaration();
            this.state = 96;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 97;
        this.match(CivixDDLParser.RBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EntityBodyDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_entityBodyDeclaration;
    return this;
}

EntityBodyDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntityBodyDeclarationContext.prototype.constructor = EntityBodyDeclarationContext;

EntityBodyDeclarationContext.prototype.fieldDeclaration = function() {
    return this.getTypedRuleContext(FieldDeclarationContext,0);
};

EntityBodyDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterEntityBodyDeclaration(this);
	}
};

EntityBodyDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitEntityBodyDeclaration(this);
	}
};




CivixDDLParser.EntityBodyDeclarationContext = EntityBodyDeclarationContext;

CivixDDLParser.prototype.entityBodyDeclaration = function() {

    var localctx = new EntityBodyDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, CivixDDLParser.RULE_entityBodyDeclaration);
    try {
        this.state = 101;
        switch(this._input.LA(1)) {
        case CivixDDLParser.SEMI:
            this.enterOuterAlt(localctx, 1);
            this.state = 99;
            this.match(CivixDDLParser.SEMI);
            break;
        case CivixDDLParser.BIGINT:
        case CivixDDLParser.BLOB:
        case CivixDDLParser.BOOLEAN:
        case CivixDDLParser.DATE:
        case CivixDDLParser.DATETIME:
        case CivixDDLParser.DECIMAL:
        case CivixDDLParser.FLOAT:
        case CivixDDLParser.INT:
        case CivixDDLParser.SMALLINT:
        case CivixDDLParser.STRING:
        case CivixDDLParser.TIME:
        case CivixDDLParser.TypeIdentifier:
        case CivixDDLParser.AT:
            this.enterOuterAlt(localctx, 2);
            this.state = 100;
            this.fieldDeclaration();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_fieldDeclaration;
    this.op = null; // Token
    return this;
}

FieldDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldDeclarationContext.prototype.constructor = FieldDeclarationContext;

FieldDeclarationContext.prototype.typeName = function() {
    return this.getTypedRuleContext(TypeNameContext,0);
};

FieldDeclarationContext.prototype.Identifier = function() {
    return this.getToken(CivixDDLParser.Identifier, 0);
};

FieldDeclarationContext.prototype.annotation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnnotationContext);
    } else {
        return this.getTypedRuleContext(AnnotationContext,i);
    }
};

FieldDeclarationContext.prototype.variableInitializer = function() {
    return this.getTypedRuleContext(VariableInitializerContext,0);
};

FieldDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.enterFieldDeclaration(this);
	}
};

FieldDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof CivixDDLListener ) {
        listener.exitFieldDeclaration(this);
	}
};




CivixDDLParser.FieldDeclarationContext = FieldDeclarationContext;

CivixDDLParser.prototype.fieldDeclaration = function() {

    var localctx = new FieldDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, CivixDDLParser.RULE_fieldDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CivixDDLParser.AT) {
            this.state = 103;
            this.annotation();
            this.state = 108;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 109;
        this.typeName();
        this.state = 111;
        _la = this._input.LA(1);
        if(((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CivixDDLParser.QUESTION - 33)) | (1 << (CivixDDLParser.ADD - 33)) | (1 << (CivixDDLParser.MUL - 33)))) !== 0)) {
            this.state = 110;
            localctx.op = this._input.LT(1);
            _la = this._input.LA(1);
            if(!(((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CivixDDLParser.QUESTION - 33)) | (1 << (CivixDDLParser.ADD - 33)) | (1 << (CivixDDLParser.MUL - 33)))) !== 0))) {
                localctx.op = this._errHandler.recoverInline(this);
            }
            else {
                this.consume();
            }
        }

        this.state = 113;
        this.match(CivixDDLParser.Identifier);
        this.state = 116;
        _la = this._input.LA(1);
        if(_la===CivixDDLParser.ASSIGN) {
            this.state = 114;
            this.match(CivixDDLParser.ASSIGN);
            this.state = 115;
            this.variableInitializer();
        }

        this.state = 118;
        this.match(CivixDDLParser.SEMI);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableInitializerContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CivixDDLParser.RULE_variableInitializer;
    return this;
}

VariableInitializerContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableInitializerContext.prototype.constructor = VariableInitializerContext;

VariableInitializerContext.prototype.arrayInitializer = function() {
    return this.getTypedRuleContext(ArrayInitializerContext,0);
};

VariableInitializerContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
